<resources>
    <string name="app_name">Sliding Puzzle</string>
    <!-- Messages -->
    <string name="msg_congratulations">Congratulations!</string>
    <string name="msg_move_count">Moves: %1$d</string>
    <string name="msg_move_count_default">No moves</string>
    <string name="msg_success_stats">%1$d moves \u2022 %2$s</string>

    <!-- Labels -->
    <string name="label_difficulty_2">Easy</string>
    <string name="label_difficulty_3">Medium</string>
    <string name="label_difficulty_4">Hard</string>
    <string name="label_difficulty_5">Insane</string>

    <!-- Buttons -->
    <string name="button_hint">Hint</string>
    <string name="button_solve">I give up!</string>
    <string name="button_play_again">Play again</string>
</resources>
