<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/generic_medium">

        <Button
            android:id="@+id/puzzle_hint_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginRight="@dimen/generic_small"
            android:text="@string/button_hint" />

        <Button
            android:id="@+id/puzzle_solve_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/generic_small"
            android:text="@string/button_solve" />

    </LinearLayout>

    <com.twentyfivesquares.slidingpuzzle.view.PuzzleView
        android:id="@+id/puzzle_puzzle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/generic_medium"
        android:layout_marginRight="@dimen/generic_medium"/>

    <TextView
        android:id="@+id/puzzle_move_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/generic_medium"
        android:gravity="center"
        android:text="@string/msg_move_count_default"/>

    <FrameLayout
        android:id="@+id/puzzle_success_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semiTransparentDark"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/generic_large"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/generic_medium"
            android:background="@android:color/white">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/puzzle_star_far_left"
                    android:layout_width="@dimen/star_small"
                    android:layout_height="@dimen/star_small"
                    android:layout_marginRight="@dimen/generic_small"
                    android:src="@drawable/ic_star_48dp"
                    android:tint="@color/colorAccent"/>

                <ImageView
                    android:id="@+id/puzzle_star_close_left"
                    android:layout_width="@dimen/star_large"
                    android:layout_height="@dimen/star_large"
                    android:layout_marginRight="@dimen/generic_small"
                    android:src="@drawable/ic_star_48dp"
                    android:tint="@color/colorAccent"/>

                <TextView
                    android:id="@+id/puzzle_success_banner_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/AppTheme.TextAppearance.Success"
                    android:text="@string/msg_congratulations" />

                <ImageView
                    android:id="@+id/puzzle_star_close_right"
                    android:layout_width="@dimen/star_large"
                    android:layout_height="@dimen/star_large"
                    android:layout_marginLeft="@dimen/generic_small"
                    android:src="@drawable/ic_star_48dp"
                    android:tint="@color/colorAccent"/>

                <ImageView
                    android:id="@+id/puzzle_star_far_right"
                    android:layout_width="@dimen/star_small"
                    android:layout_height="@dimen/star_small"
                    android:layout_marginLeft="@dimen/generic_small"
                    android:src="@drawable/ic_star_48dp"
                    android:tint="@color/colorAccent"/>

            </LinearLayout>

            <TextView
                android:id="@+id/puzzle_success_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/generic_medium"
                android:paddingBottom="@dimen/generic_medium"/>

            <Button
                android:id="@+id/puzzle_success_reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_play_again"/>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
